@@ -208,4 +208,28 @@ class CreditCardMethodsTest < Test::Unit::TestCase
     assert_equal 19, number.length
     assert_equal 'switch', CreditCard.brand?(number)
   end
+
+  def test_electron_cards
+    # return the card number so assert failures are easy to isolate
+    electron_test = Proc.new do |card_number|
+      electron = CreditCard.electron?(card_number)
+      card_number if electron
+    end
+
+    CreditCard::ELECTRON_RANGES.each do |range|
+      range.map { |leader| "#{leader}0000000000" }.each do |card_number|
+        assert_equal card_number, electron_test.call(card_number)
+      end
+    end
+
+    # Visa range
+    assert_false electron_test.call('4245180000000000')
+    assert_false electron_test.call('4918810000000000')
+
+    # 19 PAN length
+    assert electron_test.call('4249620000000000000')
+
+    # 20 PAN length
+    assert_false electron_test.call('42496200000000000')
+  end
 end
